@@ -30,9 +30,11 @@ lazy val server = project
       "org.scalameta" %% "munit" % MunitVersion % Test,
       "org.typelevel" %% "munit-cats-effect-3" % MunitCatsEffectVersion % Test,
       "ch.qos.logback" % "logback-classic" % LogbackVersion
-    )
+    ),
+    dockerExposedPorts ++= Seq(5555,9999)
   )
   .dependsOn(protobuf)
+  .enablePlugins(JavaServerAppPackaging, DockerPlugin)
 
 lazy val protobuf = project
   .in(file("modules/protobuf"))
@@ -49,14 +51,17 @@ lazy val benchmark = project.in(file("modules/benchmark")).settings(
     "org.http4s" %% "http4s-circe" % Http4sVersion,
     "org.http4s" %% "http4s-dsl" % Http4sVersion,
     "io.circe" %% "circe-generic" % CirceVersion,
+    "io.circe" %% "circe-literal" % CirceVersion,
     "org.scalameta" %% "munit" % MunitVersion % Test,
     "org.typelevel" %% "munit-cats-effect-3" % MunitCatsEffectVersion % Test,
     "ch.qos.logback" % "logback-classic" % LogbackVersion,
     "io.gatling.highcharts" % "gatling-charts-highcharts" % gatlingVersion % "test,it",
     "io.gatling" % "gatling-test-framework" % gatlingVersion % "test,it"
   ),
-  javaOptions += "--add-opens java.base/jdk.internal.misc=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true"
-).enablePlugins(GatlingPlugin).dependsOn(protobuf)
+  dockerExposedPorts ++= Seq(8080)
+)
+  .enablePlugins(GatlingPlugin, JavaServerAppPackaging,DockerPlugin)
+  .dependsOn(protobuf)
 
 
 lazy val root = (project in file(".")).aggregate(
